--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "next": "14.1.0",
     "react": "^18",
     "react-dom": "^18",
+    "react-icons": "^5.0.1",
     "styled-components": "^6.1.8",
     "swiper": "^11.0.6"
   },
